fix: subregion jump and highlight

--- a/talos/src/component/regSwitch/regSwitch.module.scss
+++ b/talos/src/component/regSwitch/regSwitch.module.scss
@@ -222,71 +222,3 @@ $indicator-height: 0.75rem;
         }
     }
 }
-
-// SVG 动画样式
-path.subregion-highlight-stroke {
-    stroke: $primary-accent-4;
-    stroke-width: 4;
-    fill: none;
-    filter: drop-shadow(0 0 8px rgba($primary-accent-4, 0.6));
-
-    animation:
-        drawStroke 1s ease-out forwards,
-        holdStroke 1.5s 1s ease-out forwards,
-        retractStroke 0.4s 1.5s ease-in forwards;
-}
-
-path.subregion-highlight-fill {
-    fill: $primary-accent-1;
-    fill-opacity: 0;
-    stroke-width: 2;
-    stroke: $primary-accent-3;
-    animation: waitForStroke 1.5s ease-out forwards;
-}
-
-@keyframes drawStroke {
-    0% {
-        stroke: rgba($primary-accent-4, 0);
-    }
-
-    100% {
-        stroke: rgba($primary-accent-4, 1);
-    }
-}
-
-@keyframes holdStroke {
-    0%,
-    100% {
-        stroke-dasharray: 0;
-    }
-}
-
-@keyframes retractStroke {
-    0% {
-        stroke-dasharray: 0;
-        stroke-dashoffset: 0;
-    }
-
-    100% {
-        stroke-dasharray: 20, 10;
-        stroke-dashoffset: 90;
-        opacity: 0;
-    }
-}
-
-@keyframes waitForStroke {
-    0% {
-        fill-opacity: 0;
-        clip-path: polygon(0 0, 0 0, -25% 100%, -25% 100%);
-    }
-
-    50% {
-        fill-opacity: 0.3;
-        clip-path: polygon(0 0, 125% 0, 100% 100%, -25% 100%);
-    }
-
-    100% {
-        fill-opacity: 0;
-        clip-path: polygon(125% 0, 125% 0, 100% 100%, 100% 100%);
-    }
-}
